# yadb

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  io.cpp
.github/workflows/: build-and-test.yml  cmake-single-platform.yml  iwyu.yml  jekyll.yml
docs/: about.markdown  index.markdown  system-architecture.drawio
docs/_posts/: 2025-05-29-hello-world.markdown  2025-05-29-welcome-to-jekyll.markdown
include/bptree/: b_plus_tree.h  internal_node.h  leaf_node.h
include/buffer/: FrameHandle.h  buffer_pool_manager.h  frame_handle.h  frame_header.h  lru_k_replacer.h  page_buffer_manager.h  page_guard.h
include/catalog/: catalog.h
include/common/: definitions.h  type_definitions.h
include/config/: config.h
include/core/: assert.h  buffer_builder.h  expected.h  row_builder.h  row_reader.h  shared_spinlock.h
include/executor/: executor.h
include/optimizer/: external_sort.h  optimizer.h
include/optimizer/operators/: file_scan_iterator.h  iterator.h  projection_iterator.h  selection_iterator.h
include/shell/: result_printer.h
include/storage/bptree/: bptree_table.h  bptree_table_manager.h  disk_table.h
include/storage/bptree/buffer/: frame.h  frame_header.h  lru_k_replacer.h  page_buffer_manager.h
include/storage/bptree/buffer_manager/: lru_k_replacer.h  page_buffer_manager.h
include/storage/bptree/disk/: disk_manager.h  disk_scheduler.h  io_tasks.h
include/storage/bptree/page/: base_page.h  checksum.h  mut_page.h  page.h  page_format.h  page_iterator.h  page_layout.h
include/storage/bptree/tree/: bptree.h
include/storage/buffer_manager/: frame.h  lru_k_replacer.h  page_buffer_manager.h
include/storage/disk/: disk_manager.h  disk_scheduler.h  io_tasks.h
include/storage/in_memory/: in_memory_table.h  in_memory_table_iterator.h  in_memory_table_manager.h
include/storage/on_disk/buffer_manager/: frame.h  lru_k_replacer.h  page.h  page_buffer_manager.h
include/storage/on_disk/disk/: disk_manager.h  disk_scheduler.h
include/storage/on_disk/heap/: heap_page.h
include/storage/page/: base_page.h  checksum.h  crc.h  mut_page.h  page.h  page_guard.h
include/storage/slotted_page/: page_format.h
include/table/: bptree_table.h  table.h  table_iterator.h  table_manager.h
include/table/bptree/: bptree_table_manager.h
scripts/: format_code.sh
src/: CMakeLists.txt  data_types.cpp  main.cpp
src/buffer/: CMakeLists.txt  buffer_pool_manager.cpp  frame_header.cpp  lru_k_replacer.cpp  page_buffer_manager.cpp  page_guard.cpp
src/catalog/: CMakeLists.txt  catalog.cpp
src/common/: CMakeLists.txt  definitions.cpp
src/config/: CMakeLists.txt  config.cpp
src/core/: CMakeLists.txt  buffer_builder.cpp  row_builder.cpp  row_reader.cpp  shared_spinlock.cpp
src/executor/: CMakeLists.txt  executor.cpp
src/optimizer/: CMakeLists.txt  README.md  external_sort.cpp  optimizer.cpp
src/optimizer/operators/: CMakeLists.txt  file_scan_iterator.cpp  iterator.cpp  projection_iterator.cpp  selection_iterator.cpp
src/shell/: CMakeLists.txt  main.cpp  result_printer.cpp
src/sql/: CMakeLists.txt  Lexer.l  Parser.y
src/storage/: CMakeLists.txt
src/storage/bptree/: CMakeLists.txt
src/storage/bptree/buffer/: CMakeLists.txt  frame.cpp  frame_header.cpp  lru_k_replacer.cpp  page_buffer_manager.cpp
src/storage/bptree/buffer_manager/: frame.cpp  lru_k_replacer.cpp  page.cpp  page_buffer_manager.cpp
src/storage/bptree/config/: CMakeLists.txt
src/storage/bptree/disk/: CMakeLists.txt  disk_manager.cpp  disk_scheduler.cpp
src/storage/bptree/page/: CMakeLists.txt  base_page.cpp  checksum.cpp  mut_page.cpp  page.cpp  page_format.cpp  page_iterator.cpp
src/storage/bptree/table/: bptree_table.cpp  bptree_table_manager.cpp  disk_table.cpp
src/storage/bptree/tree/: CMakeLists.txt  bptree.cpp  bptree_delete.cpp  bptree_insert.cpp  bptree_internal.cpp  bptree_search.cpp
src/storage/buffer_manager/: CMakeLists.txt  frame.cpp  lru_k_replacer.cpp  page.cpp  page_buffer_manager.cpp
src/storage/disk/: CMakeLists.txt  disk_manager.cpp  disk_scheduler.cpp
src/storage/in_memory/: CMakeLists.txt  in_memory_table.cpp  in_memory_table_iterator.cpp  in_memory_table_manager.cpp
src/storage/on_disk/: CMakeLists.txt
src/storage/on_disk/buffer_manager/: frame.cpp  lru_k_replacer.cpp  page.cpp  page_buffer_manager.cpp
src/storage/on_disk/disk/: disk_manager.cpp  disk_scheduler.cpp
src/storage/on_disk/heap/: heap_page.cpp
src/storage/on_disk/page/: checksum.cpp  page_format.cpp
src/storage/on_disk/table/: disk_table.cpp
src/storage/page/: base_page.cpp  checksum.cpp  mut_page.cpp  page.cpp  page_guard.cpp
src/storage/slotted_page/: CMakeLists.txt  README.md  checksum.cpp  page_format.cpp
src/table/: CMakeLists.txt  README.md  bptree_table.cpp  table.cpp  table_iterator.cpp  table_manager.cpp
src/table/bptree/: CMakeLists.txt  bptree_table.cpp  bptree_table_manager.cpp
src/yadb_ql/: YadbQLLexer.g4  YadbQLParser.g4  yadbql.l  yadbql_symbols.h
tests/: CMakeLists.txt
tests/buffer/: buffer_pool_manager_test.cpp  page_buffer_manager_test.cpp
tests/core/: CMakeLists.txt  shared_spinlock_test.cpp
tests/optimizer/: CMakeLists.txt  external_sort_test.cpp
tests/storage/: CMakeLists.txt
tests/storage/bptree/: CMakeLists.txt
tests/storage/bptree/buffer/: page_buffer_manager_test.cpp
tests/storage/bptree/disk/: disk_manager_test.cpp  disk_scheduler_test.cpp
tests/storage/bptree/page/: checksum_test.cpp  page_iterator_test.cpp
tests/storage/bptree/tree/: bptree_test.cpp
tests/storage/disk/: disk_manager_test.cpp  disk_scheduler_test.cpp
tests/storage/on_disk/: CMakeLists.txt
tests/storage/on_disk/buffer/: page_buffer_manager_test.cpp
tests/storage/on_disk/disk/: disk_manager_test.cpp  disk_scheduler_test.cpp
tests/storage/on_disk/page/: checksum_test.cpp
tests/storage/page/: checksum_test.cpp  crc_test.cpp
